# aby3

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  eval_lr_pre_rec.py  requirements.txt  tmp_graph_2dpartition.txt  tmp_graph_meta.txt
Eval/: 2d_task_evaluate.sh  advanced_benchmark.sh  analysis.sh  baseline_comp.sh  basic_baseline.sh  basic_task_evaluate.sh  basic_test.sh  bind_irq.sh  check_irq.sh  dis_exec.sh  eval_subtask.sh  exhv_baseline.sh  format_benchmark.sh  general_mpi.sh  graph_data_generation.sh  graph_query_test.sh  graph_test.sh  hd_task_evaluate.sh  kill_all.sh  large_scale.sh  monitor.sh  mpi_dis_exec.sh  mpi_subtask.sh  mpi_task.sh  mpi_test.sh  multi_steps_evaluate.sh  multiparty_benchmark.sh  network_set.sh  new_profile.sh  new_tgl_baseline.sh  parallel_benchmark.sh  priGraph_profiling.sh  profiler.sh  pta_analysis.sh  pta_automatic.sh  pta_benchmark.sh  pta_best_baseline.sh  pta_best_benchmark.sh  pta_correctness.sh  pta_execution.sh  (+15 more)
GORAM/: advanced_benchmark.py  graph_format_benchmark.py  graph_format_integration_benchmark.py  mpi_data_organization.py  real_world_graph_analysis.py
aby3-Basic/: ArithBasic.cpp  Basic.cpp  Basics.h  BoolBasic.cpp  CMakeLists.txt  Shuffle.cpp  Shuffle.h  Sort.cpp  Sort.h  SqrtOram.h  assert.h  benchmark_basic.cpp  benchmark_basic.h  timer.h
aby3-GORAM/: CMakeLists.txt  benchmark.cpp  benchmark.h
aby3-GraphQuery/: .gitignore  CMakeLists.txt  Graph.h  GraphQuery.cpp  benchmark.cpp  benchmark.h  log  pGraph.h  test_plain
aby3-GraphQuery/privGraphQuery/: preprocessing.py  utils.py
aby3-ML/: Regression.h  main-logistic.cpp  main-logistic.h
aby3-RTR/: BuildingBlocks.cpp  BuildingBlocks.h  CMakeLists.txt  CipherIndex.cpp  CipherIndex.h  DataGenerator.cpp  DataGenerator.h  DistributeRTRTest.cpp  DistributeRTRTest.h  GASFunction.h  GeneralPTA.h  PTRFunction.cpp  PTRFunction.h  PTRProfile.cpp  PTRProfile.h  PTRTest.cpp  PTRTest.h  PtAProfile.cpp  PtAProfile.h  PtATasks.h  PtATests.cpp  PtATests.h  RTRTest.cpp  RTRTest.h  RepeatThenReduce.cpp  RepeatThenReduce.h  TGL.code  Test.cpp  Test.h  debug.cpp  debug.h
(+64 files in other folders)
